--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ body {
 }
 
 @keyframes floatBG {
-  from { transform: scale(1) translateY(0); }
-  to { transform: scale(1.05) translateY(-10px); }
+  from { transform: scale(1); }
+  to { transform: scale(1.05); }
 }
 
 /* ===== Credits Section ===== */
@@ -54,23 +54,23 @@ body {
   align-items: center;
   pointer-events: none;
   z-index: 0;
-  opacity: 0.15;
+  opacity: 0.14;
 }
 
 .credits-inner {
   display: flex;
-  gap: 140px; /* BIGGER GAP BETWEEN COLUMNS */
+  gap: 8vw; /* responsive gap */
   align-items: center;
   position: relative;
 }
 
-/* Fade mask top & bottom */
+/* Fade top & bottom */
 .credits-wrapper::before,
 .credits-wrapper::after {
   content: "";
   position: absolute;
   width: 100%;
-  height: 120px;
+  height: 80px;
   left: 0;
   z-index: 2;
   pointer-events: none;
@@ -89,30 +89,28 @@ body {
 .column {
   display: flex;
   flex-direction: column;
-  gap: 48px; /* MUCH MORE SPACE BETWEEN NAMES */
-  padding: 80px 0;
-  font-size: 17px;
+  gap: clamp(18px, 3vh, 36px); /* responsive vertical spacing */
+  padding: 40px 0;
+  font-size: clamp(12px, 1.6vw, 16px); /* responsive font */
   font-weight: 600;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   text-transform: uppercase;
   color: white;
   white-space: nowrap;
 
   text-shadow:
-    0 0 8px rgba(255,255,255,0.35),
-    0 0 18px rgba(108,99,255,0.35);
+    0 0 6px rgba(255,255,255,0.35),
+    0 0 14px rgba(108,99,255,0.35);
 
-  filter: blur(0.3px);
+  filter: blur(0.25px);
 }
 
 .scroll-up {
-  animation: scrollUp 36s linear infinite;
-  will-change: transform;
+  animation: scrollUp 32s linear infinite;
 }
 
 .scroll-down {
-  animation: scrollDown 36s linear infinite;
-  will-change: transform;
+  animation: scrollDown 32s linear infinite;
 }
 
 @keyframes scrollUp {
@@ -135,49 +133,60 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 40px;
+  padding: 20px;
   animation: fadeUp 1.2s ease forwards;
 }
 
 @keyframes fadeUp {
-  from { opacity: 0; transform: translateY(50px); }
+  from { opacity: 0; transform: translateY(40px); }
   to { opacity: 1; transform: translateY(0); }
 }
 
 h1 {
-  font-size: clamp(2.5rem, 6vw, 4rem);
+  font-size: clamp(2rem, 6vw, 4rem);
   font-weight: 600;
-  letter-spacing: -0.03em;
   margin-bottom: 14px;
 }
 
 p {
   color: var(--muted);
   max-width: 520px;
-  font-size: 1.05rem;
+  font-size: clamp(0.9rem, 2vw, 1.05rem);
 }
 
 .cta {
-  margin-top: 40px;
-  padding: 16px 34px;
+  margin-top: 35px;
+  padding: 14px 30px;
   background: var(--accent);
   border-radius: 999px;
   color: white;
   text-decoration: none;
   font-weight: 500;
-  font-size: 1rem;
-  transition: transform 0.35s ease, box-shadow 0.38s ease;
+  font-size: clamp(0.9rem, 2vw, 1rem);
+  transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
 
 .cta:hover {
   transform: translateY(-3px);
-  box-shadow: 0 18px 40px rgba(108,99,255,0.4);
+  box-shadow: 0 14px 35px rgba(108,99,255,0.4);
 }
 
 .cta:active {
   transform: scale(0.96);
 }
 
+/* ===== Extra Mobile Optimization ===== */
+@media (max-width: 600px) {
+
+  .credits-inner {
+    gap: 12vw;
+  }
+
+  .column {
+    letter-spacing: 1px;
+  }
+
+}
 </style>
 </head>
 
