--- a/ar.html
+++ b/ar.html
@@ -1,35 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <title>AR Photo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<title>AR Scanner</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
+<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.2/dist/mindar-image-aframe.prod.js"></script>
 
-  <style>
-    html, body {
-      margin: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-    }
-    a-scene {
-      width: 100%;
-      height: 100%;
-      position: fixed;
-    }
-  </style>
+<style>
+html, body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: black;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+/* Smooth camera fade in */
+.fade-in {
+  animation: fadeIn 1s ease forwards;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+/* Minimal overlay UI */
+.overlay-ui {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 18px;
+  background: rgba(0,0,0,0.4);
+  backdrop-filter: blur(8px);
+  border-radius: 30px;
+  color: white;
+  font-size: 14px;
+  letter-spacing: 1px;
+  z-index: 10;
+  opacity: 0.85;
+}
+
+/* Smooth loading screen */
+.loading-screen {
+  position: fixed;
+  inset: 0;
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 16px;
+  letter-spacing: 2px;
+  z-index: 20;
+  transition: opacity 0.8s ease;
+}
+
+.loading-screen.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+</style>
 </head>
 
 <body>
 
+<div class="loading-screen" id="loading">
+  INITIALIZING CAMERA...
+</div>
+
+<div class="overlay-ui">
+  POINT CAMERA AT PHOTO
+</div>
+
 <a-scene
-  mindar-image="imageTargetSrc: targets.mind; autoStart: true;"
+  mindar-image="imageTargetSrc: targets.mind; autoStart: true; uiScanning: false; uiLoading: false;"
   vr-mode-ui="enabled: false"
   device-orientation-permission-ui="enabled: false"
   embedded
+  renderer="colorManagement: true; physicallyCorrectLights: true;"
+  class="fade-in"
 >
 
   <a-assets>
@@ -44,44 +98,73 @@
     ></video>
   </a-assets>
 
-  <a-camera position="10 0 -10" look-controls="enabled: false"></a-camera>
+  <!-- Proper camera position -->
+  <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
   <a-entity mindar-image-target="targetIndex: 0">
+
+    <!-- Smooth appearing video -->
     <a-video
       id="arVideoPlane"
       src="#arVideo"
       width="1"
       position="0 0 0.01"
+      material="shader: flat; opacity: 0;"
     ></a-video>
+
   </a-entity>
 
 </a-scene>
 
 <script>
-  const video = document.getElementById("arVideo");
-  const videoPlane = document.getElementById("arVideoPlane");
-  const target = document.querySelector("[mindar-image-target]");
+const video = document.getElementById("arVideo");
+const videoPlane = document.getElementById("arVideoPlane");
+const target = document.querySelector("[mindar-image-target]");
+const loading = document.getElementById("loading");
 
-  // Ensure nothing plays on load
+/* Hide loading when AR ready */
+document.querySelector("a-scene").addEventListener("loaded", () => {
+  setTimeout(() => {
+    loading.classList.add("hidden");
+  }, 800);
+});
+
+/* Ensure nothing plays on load */
+video.pause();
+video.muted = true;
+
+/* Auto scale video */
+video.addEventListener("loadedmetadata", () => {
+  const aspectRatio = video.videoHeight / video.videoWidth;
+  videoPlane.setAttribute("height", aspectRatio);
+});
+
+/* Smooth show on detection */
+target.addEventListener("targetFound", () => {
+  video.muted = false;
+  video.currentTime = 0;
+  video.play();
+
+  videoPlane.setAttribute("animation", {
+    property: "material.opacity",
+    to: 1,
+    dur: 400,
+    easing: "easeOutQuad"
+  });
+});
+
+/* Smooth hide on lost */
+target.addEventListener("targetLost", () => {
   video.pause();
-  video.muted = true;
+  video.currentTime = 0;
 
-  // 🔥 AUTO CALIBRATE VIDEO HEIGHT BASED ON ASPECT RATIO
-  video.addEventListener("loadedmetadata", () => {
-    const aspectRatio = video.videoHeight / video.videoWidth;
-    videoPlane.setAttribute("height", aspectRatio);
+  videoPlane.setAttribute("animation", {
+    property: "material.opacity",
+    to: 0,
+    dur: 300,
+    easing: "easeOutQuad"
   });
-
-  target.addEventListener("targetFound", () => {
-    video.muted = false;
-    video.currentTime = 0;
-    video.play();
-  });
-
-  target.addEventListener("targetLost", () => {
-    video.pause();
-    video.currentTime = 0;
-  });
+});
 </script>
 
 </body>
