--- a/ar.html
+++ b/ar.html
@@ -14,67 +14,40 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: black;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  background: transparent; /* IMPORTANT */
 }
 
-/* Smooth camera fade in */
-.fade-in {
-  animation: fadeIn 1s ease forwards;
+/* Make canvas fill screen */
+a-scene, canvas {
+  width: 100% !important;
+  height: 100% !important;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-/* Minimal overlay UI */
+/* Minimal top hint */
 .overlay-ui {
   position: fixed;
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
   padding: 10px 18px;
-  background: rgba(0,0,0,0.4);
-  backdrop-filter: blur(8px);
+  background: rgba(0,0,0,0.35);
+  backdrop-filter: blur(6px);
   border-radius: 30px;
   color: white;
-  font-size: 14px;
+  font-size: 13px;
   letter-spacing: 1px;
   z-index: 10;
-  opacity: 0.85;
-}
-
-/* Smooth loading screen */
-.loading-screen {
-  position: fixed;
-  inset: 0;
-  background: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 16px;
-  letter-spacing: 2px;
-  z-index: 20;
-  transition: opacity 0.8s ease;
-}
-
-.loading-screen.hidden {
-  opacity: 0;
-  pointer-events: none;
 }
 </style>
 </head>
 
 <body>
 
-<div class="loading-screen" id="loading">
-  INITIALIZING CAMERA...
-</div>
-
 <div class="overlay-ui">
-  POINT CAMERA AT PHOTO
+  Point camera at photo
 </div>
 
 <a-scene
@@ -82,8 +55,7 @@ html, body {
   vr-mode-ui="enabled: false"
   device-orientation-permission-ui="enabled: false"
   embedded
-  renderer="colorManagement: true; physicallyCorrectLights: true;"
-  class="fade-in"
+  renderer="colorManagement: true; alpha: true;"  <!-- IMPORTANT -->
 >
 
   <a-assets>
@@ -98,18 +70,16 @@ html, body {
     ></video>
   </a-assets>
 
-  <!-- Proper camera position -->
   <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
   <a-entity mindar-image-target="targetIndex: 0">
 
-    <!-- Smooth appearing video -->
     <a-video
       id="arVideoPlane"
       src="#arVideo"
       width="1"
       position="0 0 0.01"
-      material="shader: flat; opacity: 0;"
+      material="shader: flat; transparent: true; opacity: 0;"
     ></a-video>
 
   </a-entity>
@@ -120,26 +90,18 @@ html, body {
 const video = document.getElementById("arVideo");
 const videoPlane = document.getElementById("arVideoPlane");
 const target = document.querySelector("[mindar-image-target]");
-const loading = document.getElementById("loading");
 
-/* Hide loading when AR ready */
-document.querySelector("a-scene").addEventListener("loaded", () => {
-  setTimeout(() => {
-    loading.classList.add("hidden");
-  }, 800);
-});
-
-/* Ensure nothing plays on load */
+/* Prevent autoplay before detection */
 video.pause();
 video.muted = true;
 
-/* Auto scale video */
+/* Auto scale to aspect ratio */
 video.addEventListener("loadedmetadata", () => {
   const aspectRatio = video.videoHeight / video.videoWidth;
   videoPlane.setAttribute("height", aspectRatio);
 });
 
-/* Smooth show on detection */
+/* Smooth fade in */
 target.addEventListener("targetFound", () => {
   video.muted = false;
   video.currentTime = 0;
@@ -148,12 +110,12 @@ target.addEventListener("targetFound", () => {
   videoPlane.setAttribute("animation", {
     property: "material.opacity",
     to: 1,
-    dur: 400,
+    dur: 300,
     easing: "easeOutQuad"
   });
 });
 
-/* Smooth hide on lost */
+/* Smooth fade out */
 target.addEventListener("targetLost", () => {
   video.pause();
   video.currentTime = 0;
@@ -161,7 +123,7 @@ target.addEventListener("targetLost", () => {
   videoPlane.setAttribute("animation", {
     property: "material.opacity",
     to: 0,
-    dur: 300,
+    dur: 250,
     easing: "easeOutQuad"
   });
 });
