--- a/ar.html
+++ b/ar.html
@@ -14,10 +14,9 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: transparent; /* IMPORTANT */
+  background: black;
 }
 
-/* Make canvas fill screen */
 a-scene, canvas {
   width: 100% !important;
   height: 100% !important;
@@ -26,14 +25,13 @@ a-scene, canvas {
   left: 0;
 }
 
-/* Minimal top hint */
 .overlay-ui {
   position: fixed;
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
   padding: 10px 18px;
-  background: rgba(0,0,0,0.35);
+  background: rgba(0,0,0,0.4);
   backdrop-filter: blur(6px);
   border-radius: 30px;
   color: white;
@@ -55,7 +53,7 @@ a-scene, canvas {
   vr-mode-ui="enabled: false"
   device-orientation-permission-ui="enabled: false"
   embedded
-  renderer="colorManagement: true; alpha: true;"  <!-- IMPORTANT -->
+  renderer="colorManagement: true;"
 >
 
   <a-assets>
@@ -74,11 +72,13 @@ a-scene, canvas {
 
   <a-entity mindar-image-target="targetIndex: 0">
 
+    <!-- 1:1 PERFECT MATCH -->
     <a-video
       id="arVideoPlane"
       src="#arVideo"
       width="1"
-      position="0 0 0.01"
+      height="1"
+      position="0 0 0.02"
       material="shader: flat; transparent: true; opacity: 0;"
     ></a-video>
 
@@ -91,39 +91,34 @@ const video = document.getElementById("arVideo");
 const videoPlane = document.getElementById("arVideoPlane");
 const target = document.querySelector("[mindar-image-target]");
 
-/* Prevent autoplay before detection */
 video.pause();
 video.muted = true;
 
-/* Auto scale to aspect ratio */
-video.addEventListener("loadedmetadata", () => {
-  const aspectRatio = video.videoHeight / video.videoWidth;
-  videoPlane.setAttribute("height", aspectRatio);
-});
-
-/* Smooth fade in */
+/* When image detected */
 target.addEventListener("targetFound", () => {
   video.muted = false;
   video.currentTime = 0;
   video.play();
 
+  // Smooth fade in
   videoPlane.setAttribute("animation", {
     property: "material.opacity",
     to: 1,
-    dur: 300,
+    dur: 250,
     easing: "easeOutQuad"
   });
 });
 
-/* Smooth fade out */
+/* When image lost */
 target.addEventListener("targetLost", () => {
   video.pause();
   video.currentTime = 0;
 
+  // Smooth fade out
   videoPlane.setAttribute("animation", {
     property: "material.opacity",
     to: 0,
-    dur: 250,
+    dur: 200,
     easing: "easeOutQuad"
   });
 });
