--- a/ar.html
+++ b/ar.html
@@ -11,48 +11,33 @@
 <style>
 html, body {
   margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: transparent; /* IMPORTANT */
+  background: transparent;
 }
 
-a-scene {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-}
-.overlay-ui {
-  position: fixed;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 10px 18px;
-  background: rgba(0,0,0,0.4);
-  backdrop-filter: blur(6px);
-  border-radius: 30px;
-  color: white;
-  font-size: 13px;
-  letter-spacing: 1px;
-  z-index: 10;
+canvas {
+  position: fixed !important;
+  top: 0;
+  left: 0;
 }
 </style>
 </head>
 
 <body>
 
-<div class="overlay-ui">
-  Point camera at photo
-</div>
-
 <a-scene
-  mindar-image="imageTargetSrc: targets.mind; autoStart: true;"
-  color-space="sRGB"
-  renderer="colorManagement: true; physicallyCorrectLights: true"
+  mindar-image="imageTargetSrc: targets.mind; autoStart: true; uiScanning: false; uiLoading: false;"
+  embedded
   vr-mode-ui="enabled: false"
   device-orientation-permission-ui="enabled: false"
-  embedded
+  renderer="alpha: true; colorManagement: true;"
 >
+
+  <!-- THIS removes A-Frame default black background -->
+  <a-entity geometry="primitive: plane; width: 0; height: 0"></a-entity>
 
   <a-assets>
     <video
@@ -74,7 +59,7 @@ a-scene {
       src="#arVideo"
       width="1"
       height="1"
-      position="0 0 0.02"
+      position="0 0 0.01"
       material="shader: flat;"
     ></a-video>
   </a-entity>
@@ -90,7 +75,6 @@ video.muted = true;
 
 target.addEventListener("targetFound", () => {
   video.muted = false;
-  video.currentTime = 0;
   video.play();
 });
 
